Add pkg requirements pandas matplotlib advertools plotly

--- a/settings.ini
+++ b/settings.ini
@@ -38,6 +38,6 @@ status = 3
 user = eliasdabbas
 
 ### Optional ###
-# requirements = fastcore pandas
+requirements = pandas matplotlib advertools plotly
 # dev_requirements = 
 # console_scripts =
