Add pkg requirement: jinja2

--- a/settings.ini
+++ b/settings.ini
@@ -38,6 +38,6 @@ status = 3
 user = eliasdabbas
 
 ### Optional ###
-requirements = pandas matplotlib advertools plotly
+requirements = pandas matplotlib advertools plotly jinja2
 # dev_requirements = 
 # console_scripts =
