--- a/settings.ini
+++ b/settings.ini
@@ -1,43 +1,36 @@
 [DEFAULT]
-# All sections below are required unless otherwise specified.
-# See https://github.com/fastai/nbdev/blob/master/settings.ini for examples.
-
-### Python library ###
 repo = adviz
-lib_name = %(repo)s
-version = 0.0.1
+lib_name = adviz
+version = 0.0.2
 min_python = 3.7
 license = apache2
 black_formatting = False
-
-### nbdev ###
 doc_path = _docs
 lib_path = adviz
 nbs_path = nbs
 recursive = True
 tst_flags = notest
 put_version_in_init = True
-
-### Docs ###
 branch = main
 custom_sidebar = False
-doc_host = https://%(user)s.github.io
-doc_baseurl = /%(repo)s
-git_url = https://github.com/%(user)s/%(repo)s
-title = %(lib_name)s
-
-### PyPI ###
+doc_host = https://eliasdabbas.github.io
+doc_baseurl = /adviz
+git_url = https://github.com/eliasdabbas/adviz
+title = adviz
 audience = Developers
 author = Elias Dabbas
 author_email = eliasdabbas@gmail.com
-copyright = 2023 onwards, %(author)s
+copyright = 2023 onwards, Elias Dabbas
 description = advertools visualizations
 keywords = nbdev jupyter notebook python
 language = English
 status = 3
 user = eliasdabbas
-
-### Optional ###
 requirements = pandas matplotlib advertools plotly jinja2
-# dev_requirements = 
-# console_scripts =
+readme_nb = index.ipynb
+allowed_metadata_keys = 
+allowed_cell_metadata_keys = 
+jupyter_hooks = True
+clean_ids = True
+clear_all = False
+
