--- a/settings.ini
+++ b/settings.ini
@@ -12,7 +12,7 @@ recursive = True
 tst_flags = notest
 put_version_in_init = True
 branch = main
-custom_sidebar = False
+custom_sidebar = True
 doc_host = https://eliasdabbas.github.io
 doc_baseurl = /adviz
 git_url = https://github.com/eliasdabbas/adviz
