Add nbs/ to readme path

--- a/settings.ini
+++ b/settings.ini
@@ -27,7 +27,7 @@ language = English
 status = 3
 user = eliasdabbas
 requirements = pandas matplotlib advertools plotly jinja2
-readme_nb = readme.ipynb
+readme_nb = nbs/readme.ipynb
 allowed_metadata_keys = 
 allowed_cell_metadata_keys = 
 jupyter_hooks = True
