--- a/nbs/sidebar.yml
+++ b/nbs/sidebar.yml
@@ -11,6 +11,8 @@ website:
         file: 02_url_structure.ipynb
       - text: "URL structure (slides)"
         file: 02_url_structure_slides.ipynb
+      - text: "Racing Bar Chart"
+        file: 03_racing_chart.ipynb
       - section: "Sample charts & data"
         contents:
           - data/status_code_chart.html
