Add nbformat to dev requirements

--- a/settings.ini
+++ b/settings.ini
@@ -27,6 +27,7 @@ language = English
 status = 3
 user = eliasdabbas
 requirements = pandas matplotlib advertools plotly jinja2
+dev_requirements = nbformat
 readme_nb = index.ipynb
 allowed_metadata_keys = 
 allowed_cell_metadata_keys = 
