--- a/nbs/sidebar.yml
+++ b/nbs/sidebar.yml
@@ -13,6 +13,10 @@ website:
         file: 02_url_structure_slides.ipynb
       - text: "Racing Bar Chart"
         file: 03_racing_chart.ipynb
+      - text: "Flag Emoji"
+        file: 04_flag.ipynb
+      - text: "Flag Emoji (slides)"
+        file: 04_flag_slides.ipynb
       - section: "Sample charts & data"
         contents:
           - data/status_code_chart.html
