--- a/nbs/sidebar.yml
+++ b/nbs/sidebar.yml
@@ -21,6 +21,9 @@ website:
         file: 05_style_table.ipynb
       - text: "Styling tables (slides)"
         file: 05_style_table_slides.ipynb
+      - text: "SERP Heatmap"
+        file: 06_serp_heatmap.ipynb
+
       - section: "Sample charts & data"
         contents:
           - data/status_code_chart.html
