--- a/settings.ini
+++ b/settings.ini
@@ -27,7 +27,7 @@ language = English
 status = 3
 user = eliasdabbas
 requirements = pandas matplotlib advertools plotly jinja2
-dev_requirements = nbformat
+dev_requirements = nbformat kaleido
 readme_nb = index.ipynb
 allowed_metadata_keys = 
 allowed_cell_metadata_keys = 
