--- a/nbs/sidebar.yml
+++ b/nbs/sidebar.yml
@@ -25,6 +25,8 @@ website:
         file: 06_serp_heatmap.ipynb
       - text: "Counting Values (new)"
         file: 07_value_counts.ipynb
+      - text: "Visualizing distributions: ecdf"
+        file: 08_ecdf.ipynb
 
       - section: "Sample charts & data"
         contents:
