--- a/settings.ini
+++ b/settings.ini
@@ -26,7 +26,7 @@ keywords = nbdev jupyter notebook python
 language = English
 status = 3
 user = eliasdabbas
-requirements = pandas matplotlib advertools plotly>=6.0.0 jinja2
+requirements = pandas matplotlib advertools plotly>=6.0.0 jinja2 dash_bootstrap_templates
 dev_requirements = nbformat kaleido
 readme_nb = index.ipynb
 allowed_metadata_keys = 
