--- a/settings.ini
+++ b/settings.ini
@@ -1,7 +1,7 @@
 [DEFAULT]
 repo = adviz
 lib_name = adviz
-version = 0.0.22
+version = 0.0.23
 min_python = 3.7
 license = apache2
 black_formatting = False
@@ -34,4 +34,7 @@ allowed_cell_metadata_keys =
 jupyter_hooks = True
 clean_ids = True
 clear_all = False
+cell_number = True
+update_pyproject = True
+skip_procs = 
 
